Refactor command handling to use CommandType enum for improved readability and maintainability